--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <meta charset="utf-8">
 <html>
     <h1>我的第一个网页 My First Web</h1>
-        <h2>我的第一个网页 My First Web</h2>
-        <h3>我的第一个网页 My First Web</h3>
-        <h4>我的第一个网页 My First Web</h4>
-        <h5>我的第一个网页 My First Web</h5>
-        <h6>我的第一个网页 My First Web</h6>
+        <h2>雷雨杰的博客</h2>
+        <h3>雷雨杰的博客</h3>
+        <h4>雷雨杰的博客</h4>
+        <h5>雷雨杰的博客</h5>
+        <h6>雷雨杰的博客</h6>
 
 </html>
